[KOGITO-8903] Adding workflow writer utility (#2890)
* [KOGITO-8903] Adding workflow writer utility

* Update kogito-codegen-modules/kogito-codegen-processes/src/main/java/org/kie/kogito/codegen/process/ProcessCodegen.java

Co-authored-by: Helber Belmiro <helber.belmiro@gmail.com>

---------

Co-authored-by: Helber Belmiro <helber.belmiro@gmail.com>